tests/require_fail.svx
; pos=fail
*require 1.0abc ; test warning with suffix (added in 1.4.11)
*require 1. 42 ; spaces in the version rejected in 1.4.11 and later
*require 1.4. ; trailing dot is OK
*require 1.5  ; require a version later than the current one
SHOULD_EXIT_AND_NOT_GET_HERE
